--- a/css/fonts.css
+++ b/css/fonts.css
@@ -37,25 +37,5 @@
   src: url("../fonts/raleway-light.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-light.woff") format("woff"), url("../fonts/raleway-light.woff2") format("woff2");
   font-weight: normal;
   font-style: normal; }
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "monserat", Verdana, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 300;
-  color: #555555;
-  background-color: #ffffff;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
 
-a {
-  text-decoration: none; }
-
-img {
-  max-width: 100%; }
-
-html {
-  height: 100%; }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=fonts.css.map */
