--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "monserat", Verdana, sans-serif;
+  font-family: "monserat", Verdana, "sans-serif";
   font-size: 16px;
   line-height: 24px;
   font-weight: 300;
@@ -57,5 +57,109 @@ img {
 
 html {
   height: 100%; }
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden; }
+
+.main-header {
+  background-image: url(../img/bg_photo_11949.jpg);
+  background-repeat: no-repeat;
+  width: 1920px;
+  margin: 0 auto;
+  background-color: rgba(17, 17, 17, 0.7);
+  box-sizing: border-box; }
+
+.header-nav {
+  width: 1230px;
+  margin: 0 auto;
+  padding: 40px 30px 0 30px;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box; }
+
+.main-logo {
+  display: flex;
+  width: 181px;
+  height: 56px;
+  margin: 0 215px 0 0;
+  font-family: "Raleway", "Open Sans", "sans-serif";
+  font-size: 34px;
+  line-height: 1.2;
+  font-weight: 400;
+  letter-spacing: -0.04em;
+  color: #ffffff;
+  text-align: center;
+  align-items: center;
+  box-sizing: border-box; }
+
+.main-nav {
+  width: 637px;
+  box-sizing: border-box; }
+
+.main-nav__list {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  box-sizing: border-box; }
+
+.main-nav__link {
+  list-style-type: none;
+  color: #ffffff;
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 300;
+  margin: 0 30px 0 0; }
+  .main-nav__link.link-active {
+    color: #c7b299; }
+
+.header__form {
+  width: 24px;
+  height: 24px;
+  position: relative; }
+
+.search-form__label {
+  display: block;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box; }
+  .search-form__label:hover .search-form__svg {
+    fill: aqua; }
+  .search-form__label:active .search-form__svg {
+    opacity: 0.5; }
+  .search-form__label:focus .search-form__svg {
+    opacity: 0.5; }
+
+.search-form__input {
+  width: 0;
+  min-height: 0;
+  padding: 5px;
+  outline: none;
+  border: none;
+  box-sizing: border-box;
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #555555;
+  font-size: 16px;
+  text-transform: capitalize; }
+  .search-form__input:focus {
+    display: block;
+    width: 150px;
+    min-height: 20px;
+    transition: width 1s ease;
+    border: 2px solid #fff;
+    background-color: #ffffff; }
 
 /*# sourceMappingURL=style.css.map */
