--- a/css/style.css
+++ b/css/style.css
@@ -81,14 +81,14 @@ html {
 
 .header-nav {
   width: 1230px;
-  margin: 0 auto;
+  margin: 0 auto 280px auto;
   padding: 40px 30px 0 30px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   box-sizing: border-box; }
 
 .main-logo {
-  display: flex;
   width: 181px;
   height: 56px;
   margin: 0 215px 0 0;
@@ -99,8 +99,18 @@ html {
   letter-spacing: -0.04em;
   color: #ffffff;
   text-align: center;
+  display: flex;
   align-items: center;
   box-sizing: border-box; }
+  .main-logo:hover {
+    color: #c7b299; }
+  .main-logo:active {
+    opacity: 0.5; }
+  .main-logo:hover .main-logo-svg {
+    fill: #c7b299;
+    opacity: 0.5; }
+  .main-logo .main-logo-svg {
+    fill: #ffffff; }
 
 .main-nav {
   width: 637px;
@@ -110,7 +120,8 @@ html {
   padding: 0;
   margin: 0;
   display: flex;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  list-style: none; }
 
 .main-nav__link {
   list-style-type: none;
@@ -122,6 +133,21 @@ html {
   margin: 0 30px 0 0; }
   .main-nav__link.link-active {
     color: #c7b299; }
+  .main-nav__link:hover {
+    color: #c7b299; }
+  .main-nav__link:active {
+    opacity: 0.5; }
+
+.cart {
+  background-color: transparent;
+  border: none;
+  outline: none; }
+  .cart svg {
+    fill: #ffffff; }
+  .cart:hover svg {
+    fill: #c7b299; }
+  .cart:active svg {
+    opacity: 0.5; }
 
 .header__form {
   width: 24px;
@@ -132,9 +158,10 @@ html {
   display: block;
   width: 100%;
   height: 100%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  fill: #ffffff; }
   .search-form__label:hover .search-form__svg {
-    fill: aqua; }
+    fill: #c7b299; }
   .search-form__label:active .search-form__svg {
     opacity: 0.5; }
   .search-form__label:focus .search-form__svg {
@@ -150,7 +177,7 @@ html {
   background-color: transparent;
   position: absolute;
   top: 0;
-  left: 0;
+  left: -7px;
   color: #555555;
   font-size: 16px;
   text-transform: capitalize; }
@@ -161,5 +188,17 @@ html {
     transition: width 1s ease;
     border: 2px solid #fff;
     background-color: #ffffff; }
+
+.slider {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto; }
+
+.pagination {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box; }
 
 /*# sourceMappingURL=style.css.map */
