--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,7 @@ html {
 
 .header-nav {
     width: $container;
-    margin: 0 auto;
+    margin: 0 auto 280px auto;
     padding: 40px 30px 0 30px;
     display: flex;
     justify-content: space-between;
@@ -75,6 +75,28 @@ html {
     display: flex;
     align-items: center;
     box-sizing: border-box;
+
+    &:hover {
+        color: #c7b299;
+    }
+    &:active {
+        opacity: 0.5;
+    }
+
+    &:hover .main-logo-svg {
+        fill: #c7b299;
+        opacity: 0.5;
+    }
+
+    .main-logo-svg {
+        fill: #ffffff;
+        &:hover {
+           // fill: #c7b299;
+        }
+        &:active {
+           // opacity: 0.5;
+        }
+    }
 }
 
 .main-nav {
@@ -87,6 +109,7 @@ html {
     margin: 0;
     display: flex;
     box-sizing: border-box;
+    list-style: none;
 }
 
 
@@ -100,6 +123,27 @@ html {
     margin: 0 30px 0 0;
     &.link-active {
         color: #c7b299;
+    }
+    &:hover {
+        color: #c7b299;
+    }
+    &:active {
+        opacity: 0.5;
+    }
+}
+
+.cart {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    svg {
+        fill: #ffffff;
+    }
+    &:hover svg {
+        fill: #c7b299;
+    }
+    &:active svg {
+        opacity: 0.5;
     }
 }
 
@@ -115,9 +159,9 @@ html {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    fill: #ffffff;
     &:hover .search-form__svg {
-        //fill:  #c7b299;
-        fill: aqua;
+        fill:  #c7b299;
     }
     &:active .search-form__svg{
         opacity: 0.5;
@@ -140,7 +184,7 @@ html {
 
     position: absolute;
     top: 0;
-    left: 0;
+    left: -7px;
 
     color: $font-color;
     font-size: 16px;
@@ -154,4 +198,18 @@ html {
         border: 2px solid #fff;
         background-color: #ffffff;
     }
+}
+
+.slider {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+.pagination {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
 }
