добавила raleway-semi-bold шрифт в проект

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -14,6 +14,12 @@
   font-weight: normal;
   font-style: normal; }
 @font-face {
+  font-family: 'raleway-semibold';
+  src: url("../fonts/raleway-semibold.eot");
+  src: url("../fonts/raleway-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-semibold.woff") format("woff"), url("../fonts/raleway-semibold.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
   font-family: 'raleway-bold';
   src: url("../fonts/raleway-bold.eot");
   src: url("../fonts/raleway-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-bold.woff") format("woff"), url("../fonts/raleway-bold.woff2") format("woff2");
