--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,7 @@ html {
     padding: 20px 35px 20px 35px;
     border-radius: 3px;
 
-    //font-family: Raleway;
+    //font-family: "raleway";
     font-size: 18px;
     line-height: 23px;
     font-weight: 800;
