добавила raleqay-medium и изменила порядок форматов в font.css

--- a/css/style.css
+++ b/css/style.css
@@ -16,31 +16,37 @@
 @font-face {
   font-family: 'raleway-semibold';
   src: url("../fonts/raleway-semibold.eot");
-  src: url("../fonts/raleway-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-semibold.woff") format("woff"), url("../fonts/raleway-semibold.woff2") format("woff2");
+  src: url("../fonts/raleway-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-semibold.woff2") format("woff2"), url("../fonts/raleway-semibold.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'raleway-bold';
   src: url("../fonts/raleway-bold.eot");
-  src: url("../fonts/raleway-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-bold.woff") format("woff"), url("../fonts/raleway-bold.woff2") format("woff2");
+  src: url("../fonts/raleway-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-bold.woff2") format("woff2"), url("../fonts/raleway-bold.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'raleway-extrabold';
   src: url("../fonts/raleway-extrabold.eot");
-  src: url("../fonts/raleway-extrabold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-extrabold.woff") format("woff"), url("../fonts/raleway-extrabold.woff2") format("woff2");
+  src: url("../fonts/raleway-extrabold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-extrabold.woff2") format("woff2"), url("../fonts/raleway-extrabold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway-medium';
+  src: url("../fonts/raleway-medium.eot");
+  src: url("../fonts/raleway-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-medium.woff2") format("woff2"), url("../fonts/raleway-medium.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'raleway-regular';
   src: url("../fonts/raleway-regular.eot");
-  src: url("../fonts/raleway-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-regular.woff") format("woff"), url("../fonts/raleway-regular.woff2") format("woff2");
+  src: url("../fonts/raleway-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-regular.woff2") format("woff2"), url("../fonts/raleway-regular.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'raleway-light';
   src: url("../fonts/raleway-light.eot");
-  src: url("../fonts/raleway-light.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-light.woff") format("woff"), url("../fonts/raleway-light.woff2") format("woff2");
+  src: url("../fonts/raleway-light.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-light.woff2") format("woff2"), url("../fonts/raleway-light.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 body {
@@ -82,6 +88,7 @@ html {
   display: block;
   padding: 20px 35px 20px 35px;
   border-radius: 3px;
+  font-family: "raleway-extrabold";
   font-size: 18px;
   line-height: 23px;
   font-weight: 800;
@@ -113,7 +120,7 @@ html {
   width: 181px;
   height: 56px;
   margin: 0 215px 0 0;
-  font-family: "raleway", "Open Sans", "sans-serif";
+  font-family: "raleway-regular";
   font-size: 34px;
   line-height: 1.2;
   font-weight: 400;
@@ -147,7 +154,7 @@ html {
 .main-nav__link {
   list-style-type: none;
   color: #ffffff;
-  font-family: Montserrat;
+  font-family: "montserratlight";
   font-size: 14px;
   line-height: 1.2;
   font-weight: 300;
@@ -238,7 +245,7 @@ html {
   flex-direction: column;
   align-items: center; }
   .slider__text .slider-text__header {
-    font-family: "raleway";
+    font-family: "raleway-extrabold";
     font-size: 58px;
     line-height: 52px;
     font-weight: 800;
@@ -246,7 +253,7 @@ html {
     padding: 0;
     order: 2; }
   .slider__text span {
-    font-family: raleway;
+    font-family: "raleway-medium";
     font-size: 42px;
     line-height: 1.2;
     font-weight: 500;
