--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -37,8 +37,8 @@
     font-family: 'raleway-semibold';
     src: url('../fonts/raleway-semibold.eot');
     src: url('../fonts/raleway-semibold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-semibold.woff') format('woff'),
-         url('../fonts/raleway-semibold.woff2') format('woff2');
+    url('../fonts/raleway-semibold.woff2') format('woff2'),
+         url('../fonts/raleway-semibold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
   }
@@ -49,8 +49,8 @@
     font-family: 'raleway-bold';
     src: url('../fonts/raleway-bold.eot');
     src: url('../fonts/raleway-bold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-bold.woff') format('woff'),
-         url('../fonts/raleway-bold.woff2') format('woff2');
+         url('../fonts/raleway-bold.woff2') format('woff2'),
+         url('../fonts/raleway-bold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -62,12 +62,23 @@
     font-family: 'raleway-extrabold';
     src: url('../fonts/raleway-extrabold.eot');
     src: url('../fonts/raleway-extrabold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-extrabold.woff') format('woff'),
-         url('../fonts/raleway-extrabold.woff2') format('woff2');
+         url('../fonts/raleway-extrabold.woff2') format('woff2'),
+         url('../fonts/raleway-extrabold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
+
+@font-face {
+    font-family: 'raleway-medium';
+    src: url('../fonts/raleway-medium.eot');
+    src: url('../fonts/raleway-medium.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/raleway-medium.woff2') format('woff2'),
+         url('../fonts/raleway-medium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
 
 
 
@@ -75,8 +86,8 @@
     font-family: 'raleway-regular';
     src: url('../fonts/raleway-regular.eot');
     src: url('../fonts/raleway-regular.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-regular.woff') format('woff'),
-         url('../fonts/raleway-regular.woff2') format('woff2');
+         url('../fonts/raleway-regular.woff2') format('woff2'),
+         url('../fonts/raleway-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -88,8 +99,8 @@
     font-family: 'raleway-light';
     src: url('../fonts/raleway-light.eot');
     src: url('../fonts/raleway-light.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/raleway-light.woff') format('woff'),
-         url('../fonts/raleway-light.woff2') format('woff2');
+         url('../fonts/raleway-light.woff2') format('woff2'),
+         url('../fonts/raleway-light.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
